<resources>
    <string name="app_name">利佳师傅</string>

    <string name="developing">开发中</string>
    <string name="home">首页</string>
    <string name="setting">设置</string>


    <string name="input_phone_number">请输入手机号</string>
    <string name="not_mobile_format">手机号码格式不正确</string>
    <string name="send_code_to">验证码已发送至%1$s</string>
    <string name="input_six_code">请输入6位验证码</string>
    <string name="input_password_count">请输入6-18位密码</string>
    <string name="input_password_again">请再次输入6-18位密码</string>
    <string name="password_inconformity">两次密码输入不一致</string>
    <string name="login">登录</string>
    <string name="something">遇到问题？</string>
    <string name="master_league">师傅加盟</string>
    <string name="uploading">请上传</string>
    <string name="choose">请选择</string>
    <string name="chosen">已选择</string>
    <string name="input_id_number">请输入身份证号码</string>
    <string name="input_name">请输入姓名</string>
    <string name="confirm">确定</string>
    <string name="uploading_id">上传身份证</string>
    <string name="cancel">取消</string>
    <string name="uploading_only">上传</string>
    <string name="uploading_certificate">上传证书</string>
    <string name="choose_work">选择工种</string>
    <string name="order_receiving_set">接单设置</string>
    <string name="save">保存</string>
    <string name="sure">确定</string>
    <string name="money">￥%1$s</string>
    <string name="distance">%1$sm</string>

    <string name="touch_to_focus">触摸屏幕对焦</string>
    <string name="uploading_again">再上传一张</string>
    <string name="certificate">证书%1$s</string>
    <string name="choose_city">请选择所在城市</string>
    <string name="choose_id_front">请选择身份证正面</string>
    <string name="choose_id_reverse">请选择身份证反面</string>
    <string name="data_auditing">资料审核中</string>
    <string name="choose_minimum_fee">请选择最低上门费</string>
    <string name="choose_minimum_distance">请选择服务距离</string>
    <string name="please_choose">请选择</string>
    <string name="my_order">我的订单</string>
    <string name="order_info">订单信息</string>
    <string name="submit">提交</string>
    <string name="ordering">上班中...</string>
    <string name="order_onclick">点击上班</string>
    <string name="my_information">我的消息</string>
    <string name="clear">清空</string>
    <string name="account_details">账户明细</string>
    <string name="deposit">提现</string>
    <string name="yuan">%1$s元</string>
    <string name="dan">%1$s单</string>
    <string name="fen">%1$s分</string>
    <string name="yuan_positive">+%1$s元</string>
    <string name="yuan_burden">-%1$s元</string>
    <string name="balance">余额：%1$s</string>
    <string name="no_bound_card">您还没绑定银行卡，是否先绑定银行卡？</string>
    <string name="input_kaihu">请输入开户名</string>
    <string name="input_bank_num">请输入银行卡号</string>
    <string name="edit">编辑</string>
    <string name="done">完成</string>
    <string name="add">添加</string>
    <string name="input_code">请输入验证码</string>
    <string name="change_phone_code">验证码以短息方式发送至您的手机，请在60s内输入验证码！</string>
    <string name="go">去上门</string>
    <string name="have_left">已出发</string>
    <string name="arrive">开始服务</string>
    <string name="serving">服务中</string>
    <string name="agree_serve">用户已同意服务</string>
    <string name="serve_done">服务已完成</string>
    <string name="order_done">订单已完成</string>
    <string name="order_cancel">订单已取消</string>
    <string name="wait_affirm">待确认</string>
    <string name="contact">联系客户</string>
    <string name="see_map">查看地图</string>
    <string name="go_price">上门费：%1$s元</string>
    <string name="total_price">尾款：%1$s</string>
    <string name="go_price_sub">上门费：0元</string>
    <string name="my_comment">我的评论</string>
    <string name="arrange_self">由师傅自已安排</string>
    <string name="operate_success">操作成功</string>
    <string name="client_agree_serve">用户同意服务</string>
    <string name="pay_succeed">已完成支付</string>
    <string name="client_affirm">待客户确认</string>
    <string name="individuality_portrait">个性头像：</string>
    <string name="input_address">请输入详细地址</string>
    <string name="affirm_order">确认接单</string>
    <string name="delete_order">删除订单</string>
    <string name="delete_succeed">删除成功</string>
    <string name="client_fix_pics">客户报修相片</string>
    <string name="client_fix_describe">客户报修描述</string>
    <string name="shi_fix_pics">师傅维修照片</string>
    <string name="add_items">添加项目</string>
    <string name="reply"><![CDATA[商家回复 %1$s : <font color="#999999">%2$s</font>]]></string>
    <string name="helper_center">帮助中心</string>
    <string name="question_feedback">意见反馈</string>
    <string name="question_details">问题详情</string>
    <string name="feedback">%1$s<font color="#999999">(%2$s)</font></string>
    <string name="input_keyword">请输入关键字</string>
    <string name="mine">我的</string>
    <string name="num_300">%1$s/300</string>
    <string name="num_120">%1$s/120</string>
    <string name="input_reply_content">请输入回复内容</string>
    <string name="input_des_id">请输入设备ID</string>
    <string name="deal_notification">交易通知</string>
    <string name="information">消息</string>
    <string name="immediately_check">立即查看</string>
    <string name="all_read">全部已读</string>
    <string name="all_cancel">全部取消</string>
    <string name="all_delete">全部删除</string>
    <string name="set_read">设为已读</string>
    <string name="all_pitch_on">全部选中</string>
    <string name="delete">删除</string>
    <string name="setup_order_successful">设置接单成功</string>
    <string name="connecting">正在连接，请稍后...</string>
    <string name="confirm_close_the_order">确认要关闭接单？</string>
    <string name="confirm_open_the_order">确认要开启接单？</string>
    <string name="can_not_locate">访问被拒绝,无法获取定位信息！</string>
    <string name="speech">"您有一条新的订单，维修%1$s，预约时间：%2$s，地址：%3$s，维修内容：%4$s，维修上门费用: %5$s元;</string>
    <string name="order_a_timeout">订单已超时</string>
    <string name="grab_a_single_success">恭喜您,抢单成功</string>
    <string name="give_up_the_order">您已放弃该订单</string>
    <string name="grab_a_single_failure">抢单失败</string>
    <string name="grab_a_single_success_hint">抢单成功</string>
    <string name="login_elsewhere">您的账号可能在另一个设备上登录或者连接服务器有错！</string>
    <string name="items_cost_num">项目费  (%1$s个)</string>
    <string name="past_time">预约时间已过，请重新修改预约时间</string>
    <string name="modification_time">请先修改预约时间</string>
    <string name="do_not_modification_time">预约时间未修改，确认接单？</string>
    <string name="done_modification_time">预约时间已修改，确认接单？</string>
    <string name="opportunity">任务商机</string>
    <string name="sorry_order_error">抱歉，请求订单信息有误！</string>
    <string name="business">%1$s条商机</string>
    <string name="business_num">0条商机</string>

</resources>
